--- a/.classpath
+++ b/.classpath
@@ -6,20 +6,20 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/cglib-nodep-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/jdom-1.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/jdom2-2.0.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/jettison-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/joda-time-1.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/kxml2-2.3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/kxml2-min-2.3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/stax-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/stax-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/wstx-asl-3.2.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/xmlpull-1.1.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/xom-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/xpp3_min-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/OISISI/Projekat - Git/OISIS-2020-TIM-4/lib/xstream-1.4.9.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/jdom2-2.0.5.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/jettison-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/joda-time-1.6.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/kxml2-2.3.0.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/kxml2-min-2.3.0.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/stax-1.2.0.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/wstx-asl-3.2.7.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/xom-1.1.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="E:/semestar 6/OISISI/Projekat/OISIS-2020-TIM-4/lib/xstream-1.4.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
